<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodeClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="job1">job1</string>
    <string name="job2">job2</string>
    <string name="job3">job3</string>
    <string name="title_activity_job">job</string>
    <string name="unfinished">Mark Complete</string>
    <string name="mark_finished">Completed</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_create_project">CreateProjectActivity</string>
    <string name="title_activity_create_job">CreateJobActivity</string>
    <string name="estimate_hint">Pick an estimate:</string>
    <string name="name_hint">Enter a name...</string>
    <string name="plus">+</string>
    <string name="colon">:</string>
    <string name="zero_time">00:00</string>
    <string name="title_activity_service_start">ServiceStartActivity</string>
    <string name="title_activity_job_settings">JobSettingsActivity</string>
    <string name="title_activity_project_settings">ProjectSettingsActivity</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="project_name">Project Name:</string>
    <string name="job_name">Job Name:</string>
    <string name="notes_hint">Enter notes...</string>
    <string name="add_tag">Add Tag:</string>
    <string name="new_tag_hint">Enter a new tag...</string>
    <string name="common_tags">Common Tags:</string>
    <string name="current_tags">Current Tags:</string>
    <string name="estimatePrompt">Estimate:</string>
    <string name="differencePrompt">Difference:</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="load_demo">Load Demo</string>
    <string name="wipe_files">Wipe Files</string>

</resources>
