<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:id="@+id/notification"
    >

    <ImageView
        android:id="@+id/icon_notification"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/ic_launcher_intwined_48x48"
        android:layout_alignParentStart="true"
        />
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_toRightOf="@id/icon_notification"
        >

        <TextView
            android:text="@string/app_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/job_name_notification"
            android:text="@string/job_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        </LinearLayout>

    <Button
        android:id="@+id/notification_toggle"
        android:text="X"
        android:layout_width="60dp"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/time_notification"
        android:text="@string/zero_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_toLeftOf="@id/notification_toggle"/>
</RelativeLayout>