<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.gamecontrol.codeclock.CreateJobActivity"
    tools:ignore="MergeRootFrame" >

    <ImageButton
        android:id="@+id/finalizeJobButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_action_new"
        android:onClick="initNewJob" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/finalizeJobButton">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">
                <EditText
                    android:id="@+id/jobName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/name_hint" />
            </FrameLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="17sp"

                android:text="@string/estimate_hint"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp" >

                <TextView
                    android:id="@+id/colon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/colon" />

                <NumberPicker
                    android:id="@+id/pickHours"
                    android:layout_toStartOf="@id/colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <NumberPicker
                    android:id="@+id/pickMinutes"
                    android:layout_toEndOf="@+id/colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/text_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_centerInParent="true"
                android:text="@string/colon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:layout_toStartOf="@+id/text_colon"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/text_colon"
                android:text="@string/minutes"
                android:textSize="20sp" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
